Fixed styles on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@
 }
 
 .container {
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -176,7 +176,7 @@ section.main {
 }
 
 .car-item .button {
-  width: 100%;
+  max-width: 100%;
   padding: 15px;
   height: 54px;
   margin-top: 13px;
